fixed alignment of table header and added i18n to nodeDef fields

--- a/webapp/commonComponents/form/form.scss
+++ b/webapp/commonComponents/form/form.scss
@@ -29,7 +29,6 @@
   display: grid;
   width: 100%;
   height: 100%;
-  background-color: white;
 
   &:focus-within {
     background-color: $blueLightFocus;
