--- a/webapp/loggedin/surveyViews/surveyForm/nodeDefs/nodeDefs.scss
+++ b/webapp/loggedin/surveyViews/surveyForm/nodeDefs/nodeDefs.scss
@@ -71,6 +71,7 @@
   border-top: 1px solid $blueDark;
   border-left: 1px solid $blueDark;
   border-right: 1px solid $blueDark;
+  background-color: white;
 
   .form-input {
     border: none !important;
